trunk/Archive2/92/0d09b6420cb3f6/output
+ clang++ -std=c++11 -Wall -pedantic main.cpp
main.cpp:29:5: error: no matching function for call to object of type 'overloaded<<lambda at main.cpp:29:14> >'
    overload([](int){})(42);
    ^~~~~~~~~~~~~~~~~~~
main.cpp:21:10: note: candidate template ignored: couldn't infer template argument ''
    void operator()(T){}
         ^
1 error generated.
